--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ repositories {
 
 
 dependencies {
+    compile group: 'org.drools', name: 'drools-core', version: '7.0.0.Final'
+    compile group: 'org.kie', name: 'kie-spring', version: '7.0.0.Final'
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation('org.springframework.boot:spring-boot-starter-web')
     runtimeOnly('com.h2database:h2')
