Api calling + environment based configuration of connecting to postgres

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,11 @@
-server:
-  port: 8000
-
 spring:
-  h2:
-    console:
-      enabled: true
+#  h2:
+#    console:
+#      enabled: true
+#      path: /pari
+  profiles:
+    active: prod
+
+logging:
+  level:
+    ROOT: INFO
