--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,11 @@ repositories {
 
 
 dependencies {
+    compile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.0.0'
+//    compile group: 'postgresql', name: 'postgresql', version: '9.0-801.jdbc4'
+//    runtime('org.postgresql:postgresql')
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5' //this  works -> latest postgres version
+//    compile('org.postgresql:postgresql')  //this works too -> takes the version u have locally
     compile group: 'org.drools', name: 'drools-core', version: '7.0.0.Final'
     compile group: 'org.kie', name: 'kie-spring', version: '7.0.0.Final'
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
